GNOME Bugzilla – Bug 787750
EOG 3.26 does not store recently used files
Last modified: 2017-11-19 14:34:49 UTC
In former versions, images opened with eye of Gnome would appear in ~/.local/share/recently-used.xbel, and hence in Nautilus' "recently used" tray etc. At least for me, this is no longer the case in eog 3.26.0 on openSUSE Tumbleweed x86_64. Neither do the files appear as an entry in recently-used.xbel, nor do they appear in Nautilus. I can confirm that with several other programmes, recently-used.xbel is still updated correctly, therefore I rather blame eog. It does not, however, throw a message if started from the command line.
This actually seems to be an issue since 3.16 already when we dropped the recent files code together with the recent files menu. In the process we missed that that code was still necessary for other use cases.
commit f269e4b04fffb0ccd8f62277d1d05744ccdd86cd Author: Felix Riemann <> Date: Sun Nov 19 15:26:52 2017 +0100 EogWindow: Restore the code to update the recent files list This partially reverts 94ceb3d5679c89a099717c3b7dc741c0558c1adb where the code to update the recent files list was removed together with the corresponding menu entry. Turns out the code was still useful for the recent files list in Nautilus. https://bugzilla.gnome.org/show_bug.cgi?id=787750 --- This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.