EogWindow: Restore the code to update the recent files list

This partially reverts 94ceb3d5679c89a099717c3b7dc741c0558c1adb
where the code to update the recent files list was removed together
with the corresponding menu entry. Turns out the code was still useful
for the recent files list in Nautilus.

https://bugzilla.gnome.org/show_bug.cgi?id=787750